<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ui.auth.SignUpActivity">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/indigo_daisy"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/tag"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/your_name"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:inputType="textPersonName"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/select_country"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/spnCountrySignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:prompt="@string/select_country"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_custom"
            android:layout_marginBottom="10dp"
            android:spinnerMode="dialog" />

        <EditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_number"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_baseline_smartphone_24"
            android:inputType="phone"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_generate_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_custom"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="150dp"
                android:textColor="@color/white"
                android:text="@string/generate_otp"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_below="@+id/btn_generate_otp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/swipe_right_for_login"
                android:textColor="@color/linkColor"
                android:textSize="13sp" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>