<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.shopchain.ui.auth.AuthViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="120dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/indigo_daisy"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="70dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/tag"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/txtStatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_subtitle"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/select_country"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/spnCountry"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:prompt="@string/select_country"
                android:spinnerMode="dialog"
                android:background="@drawable/et_custom"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@id/txtStatic" />

            <EditText
                android:id="@+id/et_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enter_number"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/spnCountry"
                android:padding="10dp"
                android:text="@={viewModel.mobileNumber}"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_baseline_smartphone_24"
                android:inputType="phone"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_get_otp"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_mobile_number"
                android:background="@drawable/btn_custom"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="150dp"
                android:textColor="@color/white"
                android:text="@string/login"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/txtRegister"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/btn_get_otp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/swipe_left_for_register"
                android:textColor="@color/linkColor"
                android:textSize="13sp" />

        </RelativeLayout>

    </ScrollView>

</layout>