<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="4dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="2dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:weightSum="6">

        <ImageView
            android:id="@+id/imgStoreImage"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:padding="5dp"
            android:layout_gravity="center_vertical"
            tools:src="@drawable/default_store_image"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_weight="3.5"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtStoreName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Cremeux"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:padding="4dp" />

            <TextView
                android:id="@+id/txtStoreType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Bakery"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:padding="4dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtCurrentStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_status"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:padding="4dp"/>

                <TextView
                    android:id="@+id/txtOpen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/txtCurrentStatus"
                    android:text="@string/open"
                    android:visibility="gone"
                    android:padding="4dp"
                    android:textColor="@color/opened"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtClosed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/txtCurrentStatus"
                    android:text="@string/closed"
                    android:padding="4dp"
                    android:visibility="gone"
                    android:textColor="@color/closed"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txtRatings"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="4.5"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            app:drawableLeftCompat="@drawable/ic_baseline_star_rate_24" />

    </LinearLayout>

</androidx.cardview.widget.CardView>